[package]
name = "function-run"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dkregistry = { git = "https://github.com/camallo/dkregistry-rs" }
futures = "0.3"
home = "0.5"
libcnb = { git = "https://github.com/hone/libcnb.rs", branch = "libcnb-sys" }
tokio = { version = "1.11", features = ["rt-multi-thread", "macros"] }
toml = "0.5"
